<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".UI.Authentification.Login"
    android:id="@+id/bottomLayout"
    android:layout_width="match_parent"
    android:layout_height="608dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/form_bg"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="25dp"
    android:paddingRight="50dp">




    <!-- Bottom Half -->


    <RelativeLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!-- Text View Layout -->
        <RelativeLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/profile"
                android:textColor="@color/secondary"
                android:textSize="24dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <!-- Form Layout -->
        <RelativeLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstLayout"
            android:padding="16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname_layout"
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname"
                    style="@style/modifiedEditText"
                    android:hint="@string/fullName"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_layout"
                style="@style/parent"
                android:layout_below="@id/fullname_layout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nationalnumber"
                    style="@style/modifiedEditText"
                    android:hint="@string/national_number_hint"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                style="@style/parent"
                android:layout_below="@id/number_layout"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/modifiedEditText"
                    android:id="@+id/numTelephone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/telephone_number_hint" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"

                android:layout_below="@id/phone_layout"
                android:layout_marginTop="@dimen/signup_text_margin_top">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"

                    android:inputType="textEmailAddress"
                    android:maxLines="1" />


            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/validationPasswordbutton"
                style="@style/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputEmail"
                android:layout_marginTop="15dp"
                android:text="@string/validation"
                />
            <!-- Your form elements here -->


        </RelativeLayout>

    </RelativeLayout>




</RelativeLayout>