<!-- res/layout/fragment_inbox.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dashboard.NotificationActivity"
    android:background="@drawable/gradient_background"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/shuffle_line" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/shuffle_line" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:background="@color/transparent"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/transparent"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/whiteColor"
                    android:id="@+id/linear_layout_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >



                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="35dp"

                        android:layout_centerInParent="true"

                        android:src="@drawable/arrow" />



                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/discutionname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/Notifications"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgreay" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/bar"
        android:id="@+id/layout_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clrearall"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="14dp"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/clear_all_button"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_clear"
        android:id="@+id/notification_recycler_view"/>


    <RelativeLayout
        android:id="@+id/no_notification_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="30dp">

        <!-- Welcome Message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/welcomeMessage"
            />

        <!-- Ask, Resolve, Contact Text -->
        <TextView
            android:id="@+id/askResolveContactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryLight"
            android:layout_below="@id/welcomeMessage"
            android:layout_marginTop="8dp"
            />

        <!-- Button "Write a Message" -->
    </RelativeLayout>




    <!-- Rounded ImageButton -->
</RelativeLayout>
