<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".UI.Authentification.Login"
    android:id="@+id/bottomLayout"
    android:layout_width="match_parent"
    android:layout_height="608dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/form_bg"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="25dp"
    android:paddingRight="50dp">




        <!-- Bottom Half -->


            <RelativeLayout


                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!-- Text View Layout -->
                <RelativeLayout
                    android:id="@+id/firstLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/password_change"
                        android:textColor="@color/secondary"
                        android:textSize="24dp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <!-- Form Layout -->
                <RelativeLayout
                    android:id="@+id/formLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/firstLayout"
                    android:padding="16dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="30dp">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="start"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-33.5dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/lock" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/old_password"
                            style="@style/modifiedEditText"
                            android:hint="@string/old_password_label"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="150px" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/eye_oldPassword"
                            android:background="@color/transparent"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="end"
                            android:layout_marginTop="-30dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="Toggle Old Password Visibility"
                            android:padding="15dp"
                            android:src="@drawable/eye_closed" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_below="@id/textInputEmail"
                        android:layout_marginTop="30dp">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="start"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-33.5dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/lock" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_password"
                            style="@style/modifiedEditText"
                            android:hint="@string/new_password_label"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="150px" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/eye_newPassword"
                            android:background="@color/transparent"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="end"
                            android:layout_marginTop="-30dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="Toggle Old Password Visibility"
                            android:padding="15dp"
                            android:src="@drawable/eye_closed" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword2"
                        style="@style/parent"
                        android:layout_below="@id/textInputPassword"
                        android:layout_marginTop="30dp">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="start"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="-33.5dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/lock" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/validation_new_password"
                            style="@style/modifiedEditText"
                            android:hint="@string/validation_new_password_label"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="150px" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/eye_valid_newPassword"
                            android:background="@color/transparent"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="end"
                            android:layout_marginTop="-30dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="Toggle Old Password Visibility"
                            android:padding="15dp"
                            android:src="@drawable/eye_closed" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/validationPasswordbutton"
                        style="@style/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputPassword2"
                        android:layout_marginTop="15dp"
                        android:text="@string/validation"
                        />
                    <!-- Your form elements here -->


                </RelativeLayout>

            </RelativeLayout>




</RelativeLayout>